[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-compiler = "2.6.4"
cairo-lang-starknet = "2.6.4"
cairo-native = { git = "https://github.com/lambdaclass/cairo_native", rev = "66e9b5e053faf3b2a9129de5b15205d1cfe686eb" }
starknet-types-core = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hex = "0.4.3"
